[camera][5/x] fix overlay alignment issue by giving video a fixed width

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,7 @@ body {
 /* camera.js */
 #cam-video {
   transform: scaleX(-1);
+  width: 500px;
   border-radius: 30px;
   box-shadow: 30px 30px 30px rgba(0, 0, 0, 0.1);
 }
